fixed document upload
